# rust_snake

./: Cargo.toml
src/: main.rs
